Implement iddiff with URL inputs
