# api.yml
@@ -270,13 +270,19 @@ paths:
                 file_2:
                   type: string
                   format: binary
-                  description: kramdown-rfc2629/mmark (.md, .mkd) file or xml2rfc v2/v3 (.xml) file or text draft (.txt). This is optional. If file_2 and id_2 are not provided, second draft will be identified based on the first draft or first draft file name.
+                  description: kramdown-rfc2629/mmark (.md, .mkd) file or xml2rfc v2/v3 (.xml) file or text draft (.txt). This is optional. If file_2, id_2 or url_2 is not provided, second draft will be identified based on the first draft or first draft file name.
                 id_1:
                   type: string
                   description: First draft name unless file_1 is provided.
                 id_2:
                   type: string
-                  description: Second draft name unless file_2 is provided. This is optional. If file_2 and id_2 are not provided, second draft will be identified based on the first draft or first draft file name.
+                  description: Second draft name unless file_2 is provided. This is optional. If file_2, id_2 or url_2 is not provided, second draft will be identified based on the first draft or first draft file name.
+                url_1:
+                  type: string
+                  description: First draft URL unless file_1 or id_1 is provided.
+                url_2:
+                  type: string
+                  description: Second draft URL unless file_2 or id_2 is provided. This is optional. If file_2, id_2 or url_2 is not provided, second draft will be identified based on the first draft or first draft file name.
                 table:
                   type: string
                   description: If this property is set, HTML table is returned.
@@ -317,13 +323,22 @@ paths:
           name: id_1
           schema:
             type: string
-          description: First draft name unless file_1 is provided.
-          required: true
+          description: First draft name unless id_1 is provided.
         - in: query
           name: id_2
           schema:
             type: string
-          description: Second draft name unless file_2 is provided. This is optional. If file_2 and id_2 are not provided, second draft will be identified based on the first draft or first draft file name.
+          description: Second draft name unless url_2 is provided. This is optional. If id_2 and url_2 are not provided, second draft will be identified based on the first draft or first draft file name.
+        - in: query
+          name: url_1
+          schema:
+            type: string
+          description: First draft URL unless id_1 is provided.
+        - in: query
+          name: url_2
+          schema:
+            type: string
+          description: Second draft URL unless id_2 is provided. This is optional. If id_2 and url_2 are not provided, second draft will be identified based on the first draft or first draft file name.
         - in: query
           name: table
           schema:
